--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -66,7 +66,7 @@
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br> FishYan
-                    <a href="https://fish-yan.github.io/">GitHub</a> |
+                    <a href="https://github.com/fish-yan">GitHub</a> |
                     <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="91px" height="20px" src="https://ghbtns.com/github-btn.html?user=fish-yan&repo=fish-yan.github.io&type=star&count=true">
                     </iframe>
                 </p>
