--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,6 +24,9 @@
                     <li>
                         <a href="{{ site.baseurl }}/">主页</a>
                     </li>
+                    <li>
+                        <a href="{{ site.baseurl }}/aboutme/">关于我</a>
+                    </li>
                     {% for page in site.pages %}{% if page.title %}
                     <li>
                         <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
