--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,7 +25,7 @@
                         <a href="{{ site.baseurl }}/">主页</a>
                     </li>
                     <li>
-                        <a href="{{ aboutme | prepend: site.baseurl }}">关于我</a>
+                        <a href="aboutme.html">关于我</a>
                     </li>
                     {% for page in site.pages %}{% if page.title %}
                     <li>
