--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,6 +25,9 @@
                         <a href="{{ site.baseurl }}/">主页</a>
                     </li>
                     <li>
+                        <a href="myresume/resume.html">我的简历</a>
+                    </li>
+                    <li>
                         <a href="aboutme.html">关于我</a>
                     </li>
                     {% for page in site.pages %}{% if page.title %}
