--- a/myresume/css/style.css
+++ b/myresume/css/style.css
@@ -1092,7 +1092,7 @@ ul#nav li a:hover {
 #call-to-action h2 {
    font: 28px/36px 'Open Sans', sans-serif;
    font-weight: 700;
-   color: #414141;
+   color: #F1F1F1;
    margin-bottom: 6px;
    text-transform: uppercase;
 }
