--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,7 +25,7 @@
                         <a href="{{ site.baseurl }}/">主页</a>
                     </li>
                     <li>
-                        <a href="resume">我的简历</a>
+                        <a href="resume.html">我的简历</a>
                     </li>
                     <li>
                         <a href="aboutme.html">关于我</a>
