--- a/myresume/css/style.css
+++ b/myresume/css/style.css
@@ -1196,7 +1196,7 @@ ul#nav li a:hover {
 #contact .section-head { margin-bottom: 30px; }
 
 #contact a, #contact a:visited  { color: #11ABB0; }
-#contact a:hover, #contact a:focus { color: #fff; }
+#contact a:hover, #contact a:focus { color: #FD9827; }
 
 #contact h1 {
    color: #414141;
