--- a/myresume/css/default.css
+++ b/myresume/css/default.css
@@ -454,7 +454,7 @@ dd { margin: 0 0 0 20px; }
 
 img {
    max-width: 100%;
-   height: 100px;
+   height: auto;
 }
 img.pull-right { margin: 12px 0px 0px 18px; }
 img.pull-left { margin: 12px 18px 0px 0px; }
