--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -133,7 +133,7 @@ layout: default
             </div>  
 
     <!-- Side Catalog Container -->
-        {% if page.catalog %}
+        <!--{% if page.catalog %}
             <div class="
                 col-lg-2 col-lg-offset-0
                 visible-lg-block
@@ -147,7 +147,7 @@ layout: default
                     <ul class="catalog-body"></ul>
                 </div>
             </div>
-        {% endif %}
+        {% endif %}-->
 
     <!-- Sidebar Container -->
             <div class="
