--- a/myresume/css/style.css
+++ b/myresume/css/style.css
@@ -782,7 +782,7 @@ ul#nav li a:hover {
   	-moz-animation: jquery 2s ease;
   	-webkit-animation: jquery 2s ease;
 }
-.xmal {
+.XAML {
   background: #FD9827;
   	width: 50%;
   	-moz-animation: jquery 2s ease;
