--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,10 +25,10 @@
                         <a href="{{ site.baseurl }}/">主页</a>
                     </li>
                     <li>
-                        <a href="resume.html">我的简历</a>
+                        <a href="{{ site.baseurl }}/resume.html">我的简历</a>
                     </li>
                     <li>
-                        <a href="aboutme.html">关于我</a>
+                        <a href="{{ site.baseurl }}/aboutme.html">关于我</a>
                     </li>
                     {% for page in site.pages %}{% if page.title %}
                     <li>
